--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <title> About Me</title>
 </head>
-<body>
+<body class="firstPageImg">
+
+    <div class="container">
+            <div class="box box1"><a href="index.html">About Me</a></div>
+            <div class="box box2"><a href="page2.html"> Unit 1</a></div>
+            <div class="box box3">Unit 2</div>
+            <div class="box box4">Unit 3</div>
+            <div class="box box5">Contact</div>
+            </div>
+     
 
     <h1 class= "center">About Me</h1>
-    <p class= "center" class="box-sizing">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,<br>
+    <p class= "center">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,<br>
      but started taking art a little more seriously when I had a brief stint as a tattoo apprentice. Singing has been an interest of mine since a 4yr old singing in the <br>
      mirror and have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my childhood <br>
      when my father purchased an <a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> for me, progressing on to console gaming as the years passed.
