brand new update

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
             <div class="box box1"><a href="index.html">About Me</a></div>
             <div class="box box2"><a href="page2.html"> Unit 1</a></div>
             <div class="box box3">Unit 2</div>
-            <div class="box box4">Unit 3</div>
+            <div class="box box4">References</div>
             <div class="box box5">Contact</div>
             </div>
      
 
-    <h1 class= "center">About Me</h1>
-    <p class= "center">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,<br>
+    <h1 class= "center backgroundColor">About Me</h1>
+    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,<br>
      but started taking art a little more seriously when I had a brief stint as a tattoo apprentice. Singing has been an interest of mine since a 4yr old singing in the <br>
      mirror and have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my childhood <br>
      when my father purchased an <a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> for me, progressing on to console gaming as the years passed.
     </p>
     <br>
-    <p class= "center">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry,<br>
+    <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry,<br>
          I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org,<br> 
          working on some of the syllabus on there.</p>
          <br>
-    <p class= "center"> From then, I searched for various opportunities to take coding further and extend my knowledge of code and pick up the skills and knowledge to enter in to the industry <br>
+    <p class= "center backgroundColor"> From then, I searched for various opportunities to take coding further and extend my knowledge of code and pick up the skills and knowledge to enter in to the industry <br>
         and sectors that I would like to work in. I came across an advertisement for codeNation on instagram, when I looked into this and spoke with the staff at the school, <br>
         this seemed like a great opportunity that I could not pass up, jumped at the chance to join the course and started as soon as I possibly could. I am hoping to gain <br>
         an apprenticeship and continue my learning on the 3 month master coding course. </p>    
@@ -39,6 +39,6 @@
         <object width="520" height="315"
 data="https://www.youtube.com/embed/1D4unkmv2QU" class= "centerImg">
 </object>
-<p class= "center"> 'Video by my former band, Glory For An Idol- Don't Lose Hope' </p>
+<p class= "center backgroundColor"> 'Video from my former band, Glory For An Idol - Don't Lose Hope' </p>
 </body>
 </html>
