--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title> About Me</title>
+    <title> About Me </title> <link rel="icon" href="images/skulllogonew.jpg">
 </head>
 <body class="firstPageImg">
 
@@ -17,19 +17,19 @@
      
 
     <h1 class= "center backgroundColor">About Me</h1>
-    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,<br>
-     but started taking art a little more seriously when I had a brief stint as a tattoo apprentice. Singing has been an interest of mine since a 4yr old singing in the <br>
-     mirror and have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my childhood <br>
+    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,
+     but started taking art a little more seriously when I had a brief stint as a tattoo apprentice. Singing has been an interest of mine since a 4yr old singing in the 
+     mirror and have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my childhood 
      when my father purchased an <a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> for me, progressing on to console gaming as the years passed.
     </p>
     <br>
-    <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry,<br>
-         I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org,<br> 
+    <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry,
+         I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org,
          working on some of the syllabus on there.</p>
          <br>
-    <p class= "center backgroundColor"> From then, I searched for various opportunities to take coding further and extend my knowledge of code and pick up the skills and knowledge to enter in to the industry <br>
-        and sectors that I would like to work in. I came across an advertisement for codeNation on instagram, when I looked into this and spoke with the staff at the school, <br>
-        this seemed like a great opportunity that I could not pass up, jumped at the chance to join the course and started as soon as I possibly could. I am hoping to gain <br>
+    <p class= "center backgroundColor"> From then, I searched for various opportunities to take coding further and extend my knowledge of code and pick up the skills and knowledge to enter in to the industry 
+        and sectors that I would like to work in. I came across an advertisement for codeNation on instagram, when I looked into this and spoke with the staff at the school, 
+        this seemed like a great opportunity that I could not pass up, jumped at the chance to join the course and started as soon as I possibly could. I am hoping to gain 
         an apprenticeship and continue my learning on the 3 month master coding course. </p>    
         <br>
 
