--- a/index.html
+++ b/index.html
@@ -10,27 +10,19 @@
     <div class="container">
             <div class="box box1"><a href="index.html">About Me</a></div>
             <div class="box box2"><a href="page2.html"> Unit 1</a></div>
-            <div class="box box3">Unit 2</div>
-            <div class="box box4">References</div>
-            <div class="box box5">Contact</div>
+            <div class="box box3"><a href="page3.html"> Unit 2</a></div>
+            <div class="box box4"><a href="reference.html">References</a></div>
+            <div class="box box5"><a href="contact.html"> Contact</a></div>
             </div>
-     
-
+     <br>
+<br>
     <h1 class= "center backgroundColor">About Me</h1>
-    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. Since the age of 10 I have been quite the doodler,
-     but started taking art a little more seriously when I had a brief stint as a tattoo apprentice. Singing has been an interest of mine since a 4yr old singing in the 
-     mirror and have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my childhood 
-     when my father purchased an <a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> for me, progressing on to console gaming as the years passed.
-    </p>
+    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. I have been a bit of a doodler ever since the age of 5, but started taking art a little more seriously when I had a brief stint as a tattoo apprentice in early adulthood. Singing has been an interest of mine since a 4yr old singing in the mirror and I have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my ch<a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> , then progressing on to a mega drive and further console gaming as the years passed.
+    </p>ildhood, when my father bought me an  
     <br>
-    <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry,
-         I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org,
-         working on some of the syllabus on there.</p>
+    <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry. I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org and Treehouse, working on some of the syllabus on there.</p>
          <br>
-    <p class= "center backgroundColor"> From then, I searched for various opportunities to take coding further and extend my knowledge of code and pick up the skills and knowledge to enter in to the industry 
-        and sectors that I would like to work in. I came across an advertisement for codeNation on instagram, when I looked into this and spoke with the staff at the school, 
-        this seemed like a great opportunity that I could not pass up, jumped at the chance to join the course and started as soon as I possibly could. I am hoping to gain 
-        an apprenticeship and continue my learning on the 3 month master coding course. </p>    
+    <p class= "center backgroundColor"> From then, I searched for various opportunities to take coding further, extend my knowledge of code and pick up the skills and knowledge to enter in to the industry and sectors that I would like to work in. I came across an advertisement for codeNation on instagram, when I looked into this and spoke with the staff at the school, this seemed like a great opportunity that I could not pass up, jumped at the chance to join the course and started as soon as I possibly could. I am hoping to gain an apprenticeship and continue my learning on the 3 month master coding course. </p>    
         <br>
 
         <img src="images/aboutmepic.jpg" alt= "logo" class="centerImg">
