--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="firstPageImg">
 
-    <div class="container">
+    <div class="container1">
             <div class="box box1"><a href="index.html">About Me</a></div>
             <div class="box box2"><a href="page2.html"> Unit 1</a></div>
             <div class="box box3"><a href="page3.html"> Unit 2</a></div>
