--- a/page2.html
+++ b/page2.html
@@ -17,22 +17,22 @@
             <br>
             <br> 
 
-            <div class="container">
-                    <div class="box box2"><a href="#task12">Unit 1.2</a></div>
-                    <div class="box box1"><a href="#task13">Unit 1.3</a></div>
-                    <div class="box box2"><a href="#task14">Unit 1.4</a></div>
-                    <div class="box box1"><a href="#task15">Unit 1.5</a></div>
-                    <div class="box box2"><a href="#task16">Unit 1.6</a></div>
-                    <div class="box box1"><a href="#task17">Unit 1.7</a></div>
-                    <div class="box box2"><a href="#task21">Unit 2.1</a></div>
-                    <div class="box box1"><a href="#task22">Unit 2.2</a></div>
-                    <div class="box box2"><a href="#task23">Unit 2.3</a></div>
-                    <div class="box box1"><a href="#task24">Unit 2.4</a></div>
-                    <div class="box box2"><a href="#task25">Unit 2.5</a></div>
-                    <div class="box box1"><a href="#task31">Unit 3.1</a></div>
-                    <div class="box box2"><a href="#task32">Unit 3.2</a></div>
-                    <div class="box box1"><a href="#task33">Unit 3.3</a></div>
-                    <div class="box box2"><a href="#task34">Unit 3.4</a></div>
+            <div class="container1">
+                    <div class="box1 box2"><a href="#task12">Unit 1.2</a></div>
+                    <div class="box1 box1"><a href="#task13">Unit 1.3</a></div>
+                    <div class="box1 box2"><a href="#task14">Unit 1.4</a></div>
+                    <div class="box1 box1"><a href="#task15">Unit 1.5</a></div>
+                    <div class="box1 box2"><a href="#task16">Unit 1.6</a></div>
+                    <div class="box1 box1"><a href="#task17">Unit 1.7</a></div>
+                    <div class="box1 box2"><a href="#task21">Unit 2.1</a></div>
+                    <div class="box1 box1"><a href="#task22">Unit 2.2</a></div>
+                    <div class="box1 box2"><a href="#task23">Unit 2.3</a></div>
+                    <div class="box1 box1"><a href="#task24">Unit 2.4</a></div>
+                    <div class="box1 box2"><a href="#task25">Unit 2.5</a></div>
+                    <div class="box1 box1"><a href="#task31">Unit 3.1</a></div>
+                    <div class="box1 box2"><a href="#task32">Unit 3.2</a></div>
+                    <div class="box1 box1"><a href="#task33">Unit 3.3</a></div>
+                    <div class="box1 box2"><a href="#task34">Unit 3.4</a></div>
                     </div>
                     <br>
     <h1 class= "center backgroundColor">Unit 1, Outcome 1</h1>
