--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
      <br>
 <br>
     <h1 class= "center backgroundColor">About Me</h1>
-    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. I have been a bit of a doodler ever since the age of 5, but started taking art a little more seriously when I had a brief stint as a tattoo apprentice in early adulthood. Singing has been an interest of mine since a 4yr old singing in the mirror and I have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my ch<a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> , then progressing on to a mega drive and further console gaming as the years passed.
-    </p>ildhood, when my father bought me an  
+    <p class= "center backgroundColor">My name is Daniel Heeney, I am a vocalist and artist with an invested interest in technology and web/game design. I have been a bit of a doodler ever since the age of 5, but started taking art a little more seriously when I had a brief stint as a tattoo apprentice in early adulthood. Singing has been an interest of mine since a 4yr old singing in the mirror and I have frequented various bands throughout my life, also featuring on Popstars: The Rivals and The Voice. My interest in gaming stems from my chchildhood, when my father bought me an <a href= "http://www.computinghistory.org.uk/det/2805/Amstrad-CPC-464/" target= "_blank"> Amstrad CPC 464</a> , then progressing on to a mega drive and further console gaming as the years passed.
+    </p>
     <br>
     <p class= "center backgroundColor">I developed an interest in coding and web design whilst spending time with a few friends that already made the jump into the tech/developing sector and industry. I then proceeded to change careers to find a position with better working hours that would allow me to code in the evenings, I used various websites like freecodecamp.org and Treehouse, working on some of the syllabus on there.</p>
          <br>
